Fix : Main card button alignement

--- a/src/public/css/cards.css
+++ b/src/public/css/cards.css
@@ -36,7 +36,7 @@
                 border-radius: 9999px;
                 display: flex;
                 align-items: center;
-                height: 24px;
+                /* height: 24px; */
 
                 .text{
                     padding-left: 20px;
@@ -73,7 +73,7 @@
                     border-radius: 9999px;
                     display: flex;
                     align-items: center;
-                    height: 48px;
+                    /* height: 48px; */
                 }
 
                 @media screen and (min-width: 1536px) {
@@ -81,7 +81,7 @@
                     border-radius: 9999px;
                     display: flex;
                     align-items: center;
-                    height: 32px;
+                    /* height: 32px; */
                 }
             }    
         }
